// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Home renders correctly 1`] = `
<DocumentFragment>
  <main
    class="min-h-screen h-full flex flex-col items-center justify-center gap-16 p-4 pt-16 pb-36"
  >
    <img
      alt="Fankee Logo"
      class="animate-in-up"
      data-nimg="1"
      decoding="async"
      fetchpriority="high"
      height="40"
      src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
      srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
      style="color: transparent;"
      width="40"
    />
    <p
      class="text-md text-thin text-white overflow-ellipsis animate-in text-center animate-in-up"
      style="font-family: Arial;"
    >
      FANKEE IS THE FIRST COMMUNITY-DRIVEN MUSIC LABEL
    </p>
    <div
      class="flex flex-col gap-1 items-center"
    >
      <p
        class="text-xs text-thin text-white overflow-ellipsis animate-in text-center animate-in-up"
        style="font-family: Arial;"
      >
        We promote the tracks that are most loved by fans.
      </p>
      <p
        class="text-xs text-thin text-white overflow-ellipsis animate-in text-center animate-in-up"
        style="font-family: Arial;"
      >
        Are you ready to drop yours?
      </p>
    </div>
    <div
      class="flex flex-col gap-6 items-center halo-text pb-28"
    >
      <a
        class="flex justify-center w-full"
        href="/login"
      >
        <button
          class="rounded-full inline-flex gap-2 px-5 py-2.5 cursor-pointer active:scale-95 transition duration-300 ease-in-out animate-in-up overflow-hidden bg-black bg-opacity-75 flex justify-center w-full max-w-72"
          color="white"
        >
          <p
            class="text-xs text-thin text-white overflow-ellipsis animate-in w-full overflow-auto transition duration-300 ease-in-out hover:text-gray-300"
            style="font-family: Arial;"
          >
            Click here to login
          </p>
        </button>
      </a>
    </div>
  </main>
</DocumentFragment>
`;

exports[`Home renders correctly when user is logged in 1`] = `
<DocumentFragment>
  <main
    class="min-h-screen h-full flex flex-col items-center justify-center gap-16 p-4 pt-16 pb-36"
  >
    <img
      alt="Fankee Logo"
      class="animate-in-up"
      data-nimg="1"
      decoding="async"
      fetchpriority="high"
      height="40"
      src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
      srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
      style="color: transparent;"
      width="40"
    />
    <p
      class="text-md text-thin text-white overflow-ellipsis animate-in text-center animate-in-up"
      style="font-family: Arial;"
    >
      FANKEE IS THE FIRST COMMUNITY-DRIVEN MUSIC LABEL
    </p>
    <div
      class="flex flex-col gap-1 items-center"
    >
      <p
        class="text-xs text-thin text-white overflow-ellipsis animate-in text-center animate-in-up"
        style="font-family: Arial;"
      >
        We promote the tracks that are most loved by fans.
      </p>
      <p
        class="text-xs text-thin text-white overflow-ellipsis animate-in text-center animate-in-up"
        style="font-family: Arial;"
      >
        Are you ready to drop yours?
      </p>
    </div>
    <div
      class="flex flex-col gap-6 items-center halo-text pb-28"
    >
      <a
        class="flex justify-center w-full"
        href="/user"
      >
        <button
          class="rounded-full inline-flex gap-2 px-5 py-2.5 cursor-pointer active:scale-95 transition duration-300 ease-in-out animate-in-up overflow-hidden bg-black bg-opacity-75 flex justify-center w-full max-w-72"
          color="white"
        >
          <p
            class="text-xs text-thin text-white overflow-ellipsis animate-in w-full overflow-auto transition duration-300 ease-in-out hover:text-gray-300"
            style="font-family: Arial;"
          >
            Continue as mail@user.com
          </p>
        </button>
      </a>
    </div>
  </main>
</DocumentFragment>
`;
